@@ -229,9 +229,11 @@ literal|"Usage: datanodecluster "
 operator|+
 literal|" -n<numDataNodes> "
 operator|+
+literal|" -bpid<bpid>"
+operator|+
 literal|" [-racks<numRacks>] "
 operator|+
-literal|" [-simulated] "
+literal|" [-simulated [<simulatedCapacityPerDn>]] "
 operator|+
 literal|" [-inject startingBlockId numBlocksPerDN]"
 operator|+
@@ -311,6 +313,8 @@ name|String
 index|[]
 name|args
 parameter_list|)
+throws|throws
+name|InterruptedException
 block|{
 name|int
 name|numDataNodes
@@ -346,6 +350,18 @@ name|boolean
 name|checkDataNodeAddrConfig
 init|=
 literal|false
+decl_stmt|;
+name|long
+name|simulatedCapacityPerDn
+init|=
+name|SimulatedFSDataset
+operator|.
+name|DEFAULT_CAPACITY
+decl_stmt|;
+name|String
+name|bpid
+init|=
+literal|null
 decl_stmt|;
 name|Configuration
 name|conf
@@ -513,7 +529,7 @@ condition|)
 block|{
 name|printUsageExit
 argument_list|(
-literal|"Missing replicaiton factor"
+literal|"Missing replication factor"
 argument_list|)
 expr_stmt|;
 block|}
@@ -598,6 +614,94 @@ name|setFactory
 argument_list|(
 name|conf
 argument_list|)
+expr_stmt|;
+if|if
+condition|(
+operator|(
+name|i
+operator|+
+literal|1
+operator|)
+operator|<
+name|args
+operator|.
+name|length
+operator|&&
+operator|!
+name|args
+index|[
+name|i
+operator|+
+literal|1
+index|]
+operator|.
+name|startsWith
+argument_list|(
+literal|"-"
+argument_list|)
+condition|)
+block|{
+name|simulatedCapacityPerDn
+operator|=
+name|Long
+operator|.
+name|parseLong
+argument_list|(
+name|args
+index|[
+operator|++
+name|i
+index|]
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+elseif|else
+if|if
+condition|(
+name|args
+index|[
+name|i
+index|]
+operator|.
+name|equals
+argument_list|(
+literal|"-bpid"
+argument_list|)
+condition|)
+block|{
+if|if
+condition|(
+operator|++
+name|i
+operator|>=
+name|args
+operator|.
+name|length
+operator|||
+name|args
+index|[
+name|i
+index|]
+operator|.
+name|startsWith
+argument_list|(
+literal|"-"
+argument_list|)
+condition|)
+block|{
+name|printUsageExit
+argument_list|(
+literal|"Missing blockpoolid parameter"
+argument_list|)
+expr_stmt|;
+block|}
+name|bpid
+operator|=
+name|args
+index|[
+name|i
+index|]
 expr_stmt|;
 block|}
 elseif|else
@@ -780,6 +884,19 @@ literal|"Replication must be less than or equal to numDataNodes"
 argument_list|)
 expr_stmt|;
 block|}
+if|if
+condition|(
+name|bpid
+operator|==
+literal|null
+condition|)
+block|{
+name|printUsageExit
+argument_list|(
+literal|"BlockPoolId must be provided"
+argument_list|)
+expr_stmt|;
+block|}
 name|String
 name|nameNodeAdr
 init|=
@@ -865,6 +982,39 @@ argument_list|,
 name|dataNodeDirs
 argument_list|)
 expr_stmt|;
+name|long
+name|simulatedCapacities
+index|[]
+init|=
+operator|new
+name|long
+index|[
+name|numDataNodes
+index|]
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|numDataNodes
+condition|;
+operator|++
+name|i
+control|)
+block|{
+name|simulatedCapacities
+index|[
+name|i
+index|]
+operator|=
+name|simulatedCapacityPerDn
+expr_stmt|;
+block|}
 name|MiniDFSCluster
 name|mc
 init|=
@@ -1007,13 +1157,23 @@ name|rack4DataNode
 argument_list|,
 literal|null
 argument_list|,
-literal|null
+name|simulatedCapacities
 argument_list|,
 literal|false
 argument_list|,
 name|checkDataNodeAddrConfig
 argument_list|)
 expr_stmt|;
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+literal|10
+operator|*
+literal|1000
+argument_list|)
+expr_stmt|;
+comment|// Give the DN some time to connect to NN and init storage directories.
 if|if
 condition|(
 name|inject
@@ -1145,6 +1305,8 @@ name|asList
 argument_list|(
 name|blocks
 argument_list|)
+argument_list|,
+name|bpid
 argument_list|)
 expr_stmt|;
 name|System
