@@ -1507,6 +1507,8 @@ index|[
 name|i
 index|]
 argument_list|)
+argument_list|,
+literal|null
 argument_list|)
 expr_stmt|;
 specifier|final
